Added: principal msg, teacher list, crausal,make changes in footer

--- a/home.html
+++ b/home.html
@@ -56,34 +56,177 @@
             </div>
         </div>
     </nav>
+    <div class="flex flew-row justify-start items-center bg-[url(./assets/bg-3.jpg)] h-96 bg-center bg-clip-content">
+        <div class="p-8 ml-10 max-w-lg min-h-40 bg-white border-0 rounded-xl flex flex-col items-center opacity-85 hover:opacity-90 transition-all duration-200"
+            href="#">
+            <div class="">
+                <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Knowladge is the
+                    <br class="hidden lg:inline-block">
+                    <span class="text-green-600">
+                        Power.
+                    </span>
+                </h1>
+                <p class="mt-2 text-gray-600">"Education is the most powerful weapon which you can use to change the
+                    world."
+                </p>
+                <button
+                    class="mt-5 lg:flex gap-2 items-center border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600 hover:bg-green-600 hover:text-white transition-all duration-500">
+                    <span class="">Apply Now!!</span>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- message section -->
+    <div class="flex flex-col items-center mt-5">
+        <div class="text-lg font-semibold">
+            <span>Join our Journey of dicovery</span>
+        </div>
+        <div id class="">
+            <span class="text-3xl font-semibold">
+                WELCOME TO THE <span class="text-green-600">&nbspBRIGHT&nbsp</span><span class="text-green-600">
+                    FUTURE</span> OF KIDS.
+            </span>
+        </div>
+    </div>
+    <!-- Principal message -->
+    <div class="mx-32 flex flex-col mt-10">
+        <span class="pl-16 text-3xl font-semibold">Principal's Message</span>
+        <div class="flex flex-row justify-center">
+            <!-- Principal info -->
+            <div class="p-5 mr-10 mt-5 w-60 flex flex-col items-center border-0 rounded-xl bg-card_bg hover:shadow-xl
+                transition-all duration-300">
+                <img src="assets/profile.jpg" class="h-28 border-0 rounded-full" alt="Principal Profile Picture">
+                <h1 class="text-xl font-bold text-center text-blueish_dark">Janak Dhami</h1>
+                <h2 class="text-sm font-semibold text-center text-blueish_dark">Principal</h2>
+                <p class="text-sm leading-6 text-gray-700 text-justify">Boot camps have its supporters and supporters
+                    its detractors .
+                </p>
+                <div class="mt-1 w-full flex justify-around text-slate-400 text-sm">
+                    <a href="" class="hover:text-blue-700"><i class="fa-brands fa-facebook "></i></a>
+                    <a href="" class="hover:text-pink-700"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="" class="hover:text-red-700"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="" class="hover:text-blue-950"><i class="fa-brands fa-tiktok"></i></a>
+                </div>
+            </div>
+            <!-- Principal message -->
+            <div class="w-2/3">
+                <p class="pt-2 text-justify">It is with great pride and excitement that I welcome you to Hilltop
+                    Academy! Along with
+                    the teachers and staff at Hilltop Academy, I am working hard to continue the legacy of success by
+                    building strong relationships with parents, students, and community partners. We will focus on
+                    social-emotional learning, the use of data to drive instruction, and consistent implementation of a
+                    rigorous and relevant curriculum, to ensure that every student meets their goals and has a
+                    successful school year. Students can look forward to academic experiences that will help them build
+                    relationships while making real-world connections in a safe, caring, and supportive environment.
+                    All of us at Hilltop Academy are eager and excited to have an amazing start at this institution. As
+                    your Principal, it is important to me that everyone who steps through our doors: students, parents,
+                    and teachers are excited to be here! This attitude enables us to meet the challenges of academic
+                    excellence in a positive, fun, and nurturing way. Please feel free to call or email me to discuss
+                    any questions or concerns you might have throughout the school year.
+                    I look forward to working with you as a partner in education to ensure your child's success!</p>
+                <p class="mt-5 text-base font-semibold">Principal</p>
+                <p class="">Janak Dhami</p>
+            </div>
+        </div>
+    </div>
+    <!-- crouser -->
+
+    <!-- view section -->
+    <div class="my-8  flex flex-col">
+        <div class="flex flex-col items-center">
+            <h1 class="text-3xl font-semibold">Our Expert Trainer</h1>
+            <span class="text-sm font-medium italic text-slate-500">Something to write here</span>
+        </div>
+        <div class="mt-2 flex justify-center">
+            <div
+                class="mx-3 p-5 bg-slate-50 flex flex-col items-center w-60 text-justify hover:shadow-xl transition-all duration-300 border-0 rounded-lg">
+                <img src="assets/profile.webp" class="border-0 rounded-md" alt="">
+                <h2 class="text-lg font-medium text-blueish_dark">Nathan Macken</h2>
+                <span>Sr. web designer</span>
+                <p class="mt-3 text-slate-500 text-sm">If you are looking at blank cassettes on the web, you may be very
+                    confused at the.</p>
+                <div class="mt-1 w-full flex justify-evenly text-slate-400 text-xs">
+                    <a href="" class="hover:text-blue-700"><i class="fa-brands fa-facebook "></i></a>
+                    <a href="" class="hover:text-pink-700"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="" class="hover:text-red-700"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="" class="hover:text-blue-950"><i class="fa-brands fa-tiktok"></i></a>
+                </div>
+            </div>
+            <div class="mx-3 p-5 bg-slate-50 flex flex-col items-center w-60 text-justify hover:shadow-xl
+                transition-all duration-300 border-0 rounded-lg">
+                <img src="assets/profile.webp" class="border-0 rounded-md" alt="">
+                <h2 class="text-lg font-medium text-blueish_dark">Nathan Macken</h2>
+                <span>Sr. web designer</span>
+                <p class="mt-3 text-slate-500 text-sm">If you are looking at blank cassettes on the web, you may be very
+                    confused at the.</p>
+                <div class="mt-1 w-full flex justify-evenly text-slate-400 text-xs">
+                    <a href="" class="hover:text-blue-700"><i class="fa-brands fa-facebook "></i></a>
+                    <a href="" class="hover:text-pink-700"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="" class="hover:text-red-700"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="" class="hover:text-blue-950"><i class="fa-brands fa-tiktok"></i></a>
+                </div>
+            </div>
+            <div class="mx-3 p-5 bg-slate-50 flex flex-col items-center w-60 text-justify hover:shadow-xl
+                transition-all duration-300 border-0 rounded-lg">
+                <img src="assets/profile.webp" class="border-0 rounded-md" alt="">
+                <h2 class="text-lg font-medium text-blueish_dark">Nathan Macken</h2>
+                <span>Sr. web designer</span>
+                <p class="mt-3 text-slate-500 text-sm">If you are looking at blank cassettes on the web, you may be very
+                    confused at the.</p>
+                <div class="mt-1 w-full flex justify-evenly text-slate-400 text-xs">
+                    <a href="" class="hover:text-blue-700"><i class="fa-brands fa-facebook "></i></a>
+                    <a href="" class="hover:text-pink-700"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="" class="hover:text-red-700"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="" class="hover:text-blue-950"><i class="fa-brands fa-tiktok"></i></a>
+                </div>
+            </div>
+            <div class="mx-3 p-5 bg-slate-50 flex flex-col items-center w-60 text-justify hover:shadow-xl
+                transition-all duration-300 border-0 rounded-lg">
+                <img src="assets/profile.webp" class="border-0 rounded-md" alt="">
+                <h2 class="text-lg font-medium text-blueish_dark">Nathan Macken</h2>
+                <span>Sr. web designer</span>
+                <p class="mt-3 text-slate-500 text-sm">If you are looking at blank cassettes on the web, you may be
+                    very
+                    confused at the.</p>
+                <div class="mt-1 w-full flex justify-evenly text-slate-400 text-xs">
+                    <a href="" class="hover:text-blue-700"><i class="fa-brands fa-facebook "></i></a>
+                    <a href="" class="hover:text-pink-700"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="" class="hover:text-red-700"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="" class="hover:text-blue-950"><i class="fa-brands fa-tiktok"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- footer -->
     <footer class="font-display px-10 py-4 bg-footer_bg flex items-center flex-col lg:flex-row justify-around">
-        <aside class="flex flex-col items-center">
+        <aside class="flex flex-col items-center text-blueish_dark">
             <img class="object-cover max-w-48 max-h-48" src="./assets/logo.png" alt="Logo">
             <span class="text-2xl font-semibold">Hilltop Academy</span>
             <i>"Knowladge is the Power"</i>
             <span>Estd: 2078</span>
-            <div class="min-w-28 flex justify-around">
-                <a href=""><i class="fa-brands fa-facebook"></i></a>
-                <a href=""><i class="fa-brands fa-instagram"></i></a>
-                <a href=""><i class="fa-brands fa-youtube"></i></a>
-                <a href=""><i class="fa-brands fa-tiktok"></i></a>
+            <div class="min-w-28 flex justify-around text-slate-400 text-sm">
+                <a href="" class="hover:text-blue-700"><i class="fa-brands fa-facebook "></i></a>
+                <a href="" class="hover:text-pink-700"><i class="fa-brands fa-instagram"></i></a>
+                <a href="" class="hover:text-red-700"><i class="fa-brands fa-youtube"></i></a>
+                <a href="" class="hover:text-blue-950"><i class="fa-brands fa-tiktok"></i></a>
             </div>
         </aside>
         <nav class="pt-5 flex flex-col items-center lg:items-start">
-            <h1 class="text-xl font-medium">Contact</h1>
+            <h1 class="text-xl font-medium text-blueish_dark">Contact</h1>
             <span>Durgathali-2, Bajhang, Nepal</span>
             <span>Email:- hilltop-academy@outlook.com</span>
             <span>Phone:- +9779814637756</span>
         </nav>
         <nav class="pt-5 flex flex-col items-center lg:items-start">
-            <h1 class="text-xl font-medium">Principal</h1>
+            <h1 class="text-xl font-medium text-blueish_dark">Principal</h1>
             <span>Janak Dhami</span>
             <span>janakdhamieg@gmail.com</span>
             <span>+977-9863943736</span>
         </nav>
         <nav class="pt-5 flex flex-col items-center lg:items-start">
-            <h1 class="text-xl font-medium">Links</h1>
+            <h1 class="text-xl font-medium text-blueish_dark">Links</h1>
             <a href="" class="hover:underline">About us</a>
             <a href="" class="hover:underline">Contact</a>
             <a href="" class="hover:underline">Gallery</a>
