--- a/gallary.html
+++ b/gallary.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="p-3 px-16 flex bg-white justify-between items-center">
+    <nav class="p-3 px-16 flex bg-navbar_color justify-between items-center">
         <a href="#" id="brand" class="flex gap-2 items-center">
             <img class="object-cover max-w-32 max-h-32" src="./assets/logo.png" alt="Logo">
             <span class="text-lg font-medium font-display">Hilltop Academy</span>
@@ -58,63 +58,88 @@
     </nav>
 
     <!-- gallary -->
-    <div class="flex justify-center relative">
-        <div class="w-60 bg-red-700 fixed top-24 left-32 right-0">
-            <p>2020</p>
-            <p>2020</p>
-            <p>2020</p>
-            <p>2020</p>
-            <p>2020</p>
-            <p>2020</p>
-        </div>
-        <div class="w-60 bg-slate-700"></div>
-        <div class="w-2/3">
-            <div class="bg-red-700">
-                <span class="text-3xl font-semibold">
-                    Photo <span class="text-green-600">Gallery.</span>
+        <div class="w-full bg-[url(./assets/bg-1.jpg)] h-80 bg-center bg-clip-content flex justify-center items-center">
+            <div>
+                <span class="text-3xl font-bold flex items-center justify-center ">
+                    Photo <span class="text-logo_blue">Gallery.</span>
                 </span>
-                <p>Hilltop Preceious Memories are stored for eternity.</p>
+                <p class="text-white">Hilltop Preceious Memories are stored for eternity.</p>
+            </div>
+        </div>
+        <div >
+                <ul class="flex justify-center gap-4 my-2">
+                    <li class="active listOfNav" data-filter="all">All</li>
+                    <li class="listOfNav" data-filter=".drawing">Drawing</li>
+                    <li class="listOfNav" data-filter=".excursions">Excursions</li>
+                    <li class="listOfNav" data-filter=".courses">Courses</li>
+                    <li class="listOfNav" data-filter=".play">Play time</li>
+                </ul>
+          </div>
+
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4  mt-10 px-16 py-10">
+            <div>
+              <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
             </div>
             <div>
-
+                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
+            </div>
+            <div>
+                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
+            </div>
+            <div>
+                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
+            </div>
+            <div>
+                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
+            </div>
+            <div>
+                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
+            </div>
+            <div>
+                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
+            </div>
+            <div>
+                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
             </div>
         </div>
-    </div>
 
-    <!-- footer -->
-    <footer class="font-display px-10 py-4 bg-footer_bg flex items-center flex-col lg:flex-row justify-around">
-        <aside class="flex flex-col items-center text-blueish_dark">
-            <img class="object-cover max-w-48 max-h-48" src="./assets/logo.png" alt="Logo">
-            <span class="text-2xl font-semibold">Hilltop Academy</span>
-            <i>"Knowladge is the Power"</i>
-            <span>Estd: 2078</span>
-            <div class="min-w-28 flex justify-around text-slate-400 text-sm">
-                <a href="" class="hover:text-blue-700"><i class="fa-brands fa-facebook "></i></a>
-                <a href="" class="hover:text-pink-700"><i class="fa-brands fa-instagram"></i></a>
-                <a href="" class="hover:text-red-700"><i class="fa-brands fa-youtube"></i></a>
-                <a href="" class="hover:text-blue-950"><i class="fa-brands fa-tiktok"></i></a>
-            </div>
-        </aside>
-        <nav class="pt-5 flex flex-col items-center lg:items-start">
-            <h1 class="text-xl font-medium text-blueish_dark">Contact</h1>
-            <span>Durgathali-2, Bajhang, Nepal</span>
-            <span>Email:- hilltop-academy@outlook.com</span>
-            <span>Phone:- +9779814637756</span>
-        </nav>
-        <nav class="pt-5 flex flex-col items-center lg:items-start">
-            <h1 class="text-xl font-medium text-blueish_dark">Principal</h1>
-            <span>Janak Dhami</span>
-            <span>janakdhamieg@gmail.com</span>
-            <span>+977-9863943736</span>
-        </nav>
-        <nav class="pt-5 flex flex-col items-center lg:items-start">
-            <h1 class="text-xl font-medium text-blueish_dark">Links</h1>
-            <a href="" class="hover:underline">About us</a>
-            <a href="" class="hover:underline">Contact</a>
-            <a href="" class="hover:underline">Gallery</a>
-            <a href="" class="hover:underline">Sevices</a>
-        </nav>
-    </footer>
+        <!-- Footer -->
+
+        <footer class="font-display  bg-[url(./assets/b14.png)] bg-navbar_color h-80 bg-center bg-clip-content  flex items-center flex-col lg:flex-row justify-around">
+            <aside class="flex flex-col items-center text-black">
+                <img class="object-cover max-w-48 max-h-48" src="./assets/logo.png" alt="Logo">
+                <span class="text-2xl font-semibold">Hilltop Academy</span>
+                <i>"Knowladge is the Power"</i>
+                <span>Estd: 2078</span>
+                <div class="min-w-28 flex justify-around text-black text-sm mt-2">
+                    <a href="" class="hover:text-blue-700"><i class="fa-brands fa-facebook "></i></a>
+                    <a href="" class="hover:text-pink-700"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="" class="hover:text-red-700"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="" class="hover:text-blue-950"><i class="fa-brands fa-tiktok"></i></a>
+                </div>
+            </aside>
+            <nav class="pt-5 flex flex-col items-center lg:items-start">
+                <h1 class="text-xl font-semibold text-black">Contact</h1>
+                <span>Durgathali-2, Bajhang, Nepal</span>
+                <span>Email:- hilltop-academy@outlook.com</span>
+                <span>Phone:- +9779814637756</span>
+            </nav>
+            <nav class="pt-5 flex flex-col items-center lg:items-start ">
+                <h1 class="text-xl font-semibold text-black">Principal</h1>
+                <span>Janak Dhami</span>
+                <span>janakdhamieg@gmail.com</span>
+                <span>+977-9863943736</span>
+            </nav>
+            <nav class="pt-5 flex flex-col items-center lg:items-start">
+                <h1 class="text-xl font-semibold text-black">Links</h1>
+                <a href="" class="hover:underline">About us</a>
+                <a href="" class="hover:underline">Contact</a>
+                <a href="" class="hover:underline">Gallery</a>
+                <a href="" class="hover:underline">Sevices</a>
+            </nav>
+        </footer>
+
+
 </body>
 <script src="script.js"></script>
 
