Update: select drop down in gallary and updated contact page

--- a/gallary.html
+++ b/gallary.html
@@ -67,16 +67,27 @@
             </div>
         </div>
         <div >
-                <ul class="flex justify-center gap-4 my-2">
+                <ul class="flex justify-center gap-4 my-6">
+                    <div class="relative inline-flex">
+                        <svg class="w-2 h-2 absolute top-0 right-0 m-4 pointer-events-none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 412 232"><path d="M206 171.144L42.678 7.822c-9.763-9.763-25.592-9.763-35.355 0-9.763 9.764-9.763 25.592 0 35.355l181 181c4.88 4.882 11.279 7.323 17.677 7.323s12.796-2.441 17.678-7.322l181-181c9.763-9.764 9.763-25.592 0-35.355-9.763-9.763-25.592-9.763-35.355 0L206 171.144z" fill="#648299" fill-rule="nonzero"/></svg>
+                        <select class="border border-gray-300 rounded-full text-gray-600 h-10 pl-5 pr-10 bg-white hover:border-gray-400 focus:outline-none appearance-none">
+                            <option>Choose a Year</option>
+                            <option>2024</option>
+                            <option>2023</option>
+                            <option>2022</option>
+                            <option>2021</option>
+                            <option>2020</option>
+                        </select>
+                    </div>
                     <li class="active listOfNav" data-filter="all">All</li>
-                    <li class="listOfNav" data-filter=".drawing">Drawing</li>
-                    <li class="listOfNav" data-filter=".excursions">Excursions</li>
-                    <li class="listOfNav" data-filter=".courses">Courses</li>
-                    <li class="listOfNav" data-filter=".play">Play time</li>
+                    <li class="listOfNav" data-filter=".festival">Festival</li>
+                    <li class="listOfNav" data-filter=".activities">Activities</li>
+                    <li class="listOfNav" data-filter=".field_visit">Field Visit</li>
+                    <li class="listOfNav" data-filter=".play"></li>
                 </ul>
           </div>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4  mt-10 px-16 py-10">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 px-16">
             <div>
               <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
             </div>
