--- a/contact.html
+++ b/contact.html
@@ -75,34 +75,16 @@
 
     </div>
 
-    <div class="flex flex-col items-center mt-10">
-        <div  class="flex flex-col items-center w-3/4">
-            <h1 class="text-3xl font-display font-semibold">
-                Get In <span class="text-green-600">Touch</span>
-            </h1>
-            <p class="text-center">
-Please don't hesitate to get in touch with us via phone, email, or the contact form on our website. we're here to help with any questions or concerns you may have.</p>
-        </div>
-        <div class="flex mt-8">
-            <div class="flex flex-col items-center px-5">
-                <a href="" class="text-logo_blue text-3xl bg-blue-100 w-16 h-16 rounded-full flex justify-center items-center"><i class="fa-solid fa-location-dot"></i></a>
-                <span class="mt-3">Durgathali-2, Bajhang, Nepal</span>
-            </div>
-            <div class="flex flex-col items-center px-5">
-                <a href="" class="text-logo_blue text-3xl bg-blue-100 w-16 h-16 rounded-full flex justify-center items-center"><i class="fa-solid fa-envelope"></i></a>
-                <span class="mt-3">hilltop-academy@outlook.com</span>
-            </div>
-            <div class="flex flex-col items-center px-5">
-                <a href="" class="text-logo_blue text-3xl bg-blue-100 w-16 h-16 rounded-full flex justify-center items-center"><i class="fa-solid fa-phone-volume"></i></a>
-                <span class="mt-3">+977-9814637756</span>
-            </div>
-        </div>
-    </div>
+    <div class="flex flex-row justify-around items-center py-10 px-10">
+        <iframe class="flex-1"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3472.6474726390525!2d81.03834501440905!3d29.497481051158882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39a3e902eeb7df3d%3A0x2d263014c49f02b1!2sHILLTOP%20ACADEMY!5e0!3m2!1sen!2snp!4v1631942416605!5m2!1sen!2snp"
+            width="97%" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
 
-    <div class="flex flex-row justify-around items-center py-10">
         <div class="flex flex-1 justify-center">
             <div class="mx-5 w-3/4">
-                <span class="text-lg font-semibold text-gray-700">Fill the form for inquary about Hilltop Academy.</span>
+                <span class="text-lg font-semibold text-gray-700">Fill the form for inquary about Hilltop
+                    Academy.</span>
                 <form class="mt-8 space-y-6" action="#" method="POST">
                     <div class="flex space-x-4">
                         <div class="w-1/2">
@@ -121,32 +103,58 @@ Please don't hesitate to get in touch with us via phone, email, or the contact f
                     <div>
                         <label for="subject" class="block text-sm font-medium text-gray-700">Subject</label>
                         <input id="subject" name="subject" type="text" required
-                                class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+                            class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
                             placeholder="Subject">
                     </div>
                     <div>
                         <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
                         <textarea id="message" name="message" rows="4" required
-                                    class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
-                                placeholder="Your Message"></textarea>
+                            class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+                            placeholder="Your Message"></textarea>
                     </div>
                     <div>
                         <button type="submit"
-                                class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-logo_blue hover:bg-indigo-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transform duration-300">
+                            class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-logo_blue hover:bg-indigo-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transform duration-300">
                             Submit
                         </button>
                     </div>
                 </form>
             </div>
         </div>
-        <iframe
-            class="flex-1"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3472.6474726390525!2d81.03834501440905!3d29.497481051158882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39a3e902eeb7df3d%3A0x2d263014c49f02b1!2sHILLTOP%20ACADEMY!5e0!3m2!1sen!2snp!4v1631942416605!5m2!1sen!2snp"
-            width="97%" height="450" style="border:0;" allowfullscreen="" loading="lazy">
-        </iframe>
     </div>
 
-    
+    <div class="flex flex-col items-center mt-5 mb-10">
+        <div class="flex flex-col items-center w-3/4">
+            <h1 class="text-3xl font-display font-semibold">
+                Get In <span class="text-green-600">Touch</span>
+            </h1>
+            <p class="text-center">
+                Please don't hesitate to get in touch with us via phone, email, or the contact form on our website.
+                we're here to help with any questions or concerns you may have.</p>
+        </div>
+        <div class="flex mt-8">
+            <div class="flex flex-col items-center px-5">
+                <a href=""
+                    class="text-logo_blue text-3xl bg-blue-100 w-16 h-16 rounded-full flex justify-center items-center"><i
+                        class="fa-solid fa-location-dot"></i></a>
+                <span class="mt-3">Durgathali-2, Bajhang, Nepal</span>
+            </div>
+            <div class="flex flex-col items-center px-5">
+                <a href=""
+                    class="text-logo_blue text-3xl bg-blue-100 w-16 h-16 rounded-full flex justify-center items-center"><i
+                        class="fa-solid fa-envelope"></i></a>
+                <span class="mt-3">hilltop-academy@outlook.com</span>
+            </div>
+            <div class="flex flex-col items-center px-5">
+                <a href=""
+                    class="text-logo_blue text-3xl bg-blue-100 w-16 h-16 rounded-full flex justify-center items-center"><i
+                        class="fa-solid fa-phone-volume"></i></a>
+                <span class="mt-3">+977-9814637756</span>
+            </div>
+        </div>
+    </div>
+
+
     <!-- footer -->
     <footer class="font-display px-10 py-4 bg-footer_bg flex items-center flex-col lg:flex-row justify-around">
         <aside class="flex flex-col items-center text-blueish_dark">
