--- a/gallary.html
+++ b/gallary.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="p-3 px-16 flex bg-navbar_color justify-between items-center">
+    <nav class="p-3 px-16 flex bg-white justify-between items-center">
         <a href="#" id="brand" class="flex gap-2 items-center">
             <img class="object-cover max-w-32 max-h-32" src="./assets/logo.png" alt="Logo">
             <span class="text-lg font-medium font-display">Hilltop Academy</span>
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div >
-                <ul class="flex justify-center gap-4 my-6">
+                <ul class="flex flex-wrap justify-center gap-4 my-6">
                     <div class="relative inline-flex">
                         <svg class="w-2 h-2 absolute top-0 right-0 m-4 pointer-events-none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 412 232"><path d="M206 171.144L42.678 7.822c-9.763-9.763-25.592-9.763-35.355 0-9.763 9.764-9.763 25.592 0 35.355l181 181c4.88 4.882 11.279 7.323 17.677 7.323s12.796-2.441 17.678-7.322l181-181c9.763-9.764 9.763-25.592 0-35.355-9.763-9.763-25.592-9.763-35.355 0L206 171.144z" fill="#648299" fill-rule="nonzero"/></svg>
                         <select class="border border-gray-300 rounded-full text-gray-600 h-10 pl-5 pr-10 bg-white hover:border-gray-400 focus:outline-none appearance-none">
@@ -79,76 +79,78 @@
                             <option>2020</option>
                         </select>
                     </div>
-                    <li class="active listOfNav" data-filter="all">All</li>
-                    <li class="listOfNav" data-filter=".festival">Festival</li>
-                    <li class="listOfNav" data-filter=".activities">Activities</li>
-                    <li class="listOfNav" data-filter=".field_visit">Field Visit</li>
-                    <li class="listOfNav" data-filter=".play"></li>
+                    <div class="flex flex-row">
+                        <li class="active listOfNav" data-filter="all">All</li>
+                        <li class="listOfNav" data-filter=".festival">Festival</li>
+                        <li class="listOfNav" data-filter=".activities">Activities</li>
+                        <li class="listOfNav" data-filter=".field_visit">Field Visit</li>
+                        <li class="listOfNav" data-filter=".play"></li>
+                    </div>
                 </ul>
           </div>
-
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 px-16">
-            <div>
-              <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
-            </div>
-            <div>
-                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
-            </div>
-            <div>
-                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
-            </div>
-            <div>
-                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
-            </div>
-            <div>
-                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
-            </div>
-            <div>
-                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
-            </div>
-            <div>
-                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
-            </div>
-            <div>
-                <img src="assets/bg-2.jpg" alt="Photo 1" class="w-full h-auto">
-            </div>
-        </div>
+        
+          <div class="flex flex-col items-center">
+                <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5">
+                  <div class="w-64 h-64 p-3 bg-cover bg-center hover:shadow-xl transition-all duration-300 border border-gray-200">
+                    <img src="./assets/gallary.jpg" class="">
+                  </div>
+                  <div class="w-64 h-64 p-3 bg-cover bg-center hover:shadow-xl transition-all duration-300 border border-gray-200">
+                    <img src="./assets/gallary.jpg" class="">
+                  </div>
+                  <div class="w-64 h-64 p-3 bg-cover bg-center hover:shadow-xl transition-all duration-300 border border-gray-200">
+                    <img src="./assets/gallary.jpg" class="">
+                  </div>
+                  <div class="w-64 h-64 p-3 bg-cover bg-center hover:shadow-xl transition-all duration-300 border border-gray-200">
+                    <img src="./assets/gallary.jpg" class="">
+                  </div>
+                  <div class="w-64 h-64 p-3 bg-cover bg-center hover:shadow-xl transition-all duration-300 border border-gray-200">
+                    <img src="./assets/gallary.jpg" class="">
+                  </div>
+                  <div class="w-64 h-64 p-3 bg-cover bg-center hover:shadow-xl transition-all duration-300 border border-gray-200">
+                    <img src="./assets/gallary.jpg" class="">
+                  </div>
+                  <div class="w-64 h-64 p-3 bg-cover bg-center hover:shadow-xl transition-all duration-300 border border-gray-200">
+                    <img src="./assets/gallary.jpg" class="">
+                  </div>
+              </div>
+          </div>
 
         <!-- Footer -->
 
-        <footer class="font-display  bg-[url(./assets/b14.png)] bg-navbar_color h-80 bg-center bg-clip-content  flex items-center flex-col lg:flex-row justify-around">
-            <aside class="flex flex-col items-center text-black">
-                <img class="object-cover max-w-48 max-h-48" src="./assets/logo.png" alt="Logo">
-                <span class="text-2xl font-semibold">Hilltop Academy</span>
-                <i>"Knowladge is the Power"</i>
-                <span>Estd: 2078</span>
-                <div class="min-w-28 flex justify-around text-black text-sm mt-2">
-                    <a href="" class="hover:text-blue-700"><i class="fa-brands fa-facebook "></i></a>
-                    <a href="" class="hover:text-pink-700"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="" class="hover:text-red-700"><i class="fa-brands fa-youtube"></i></a>
-                    <a href="" class="hover:text-blue-950"><i class="fa-brands fa-tiktok"></i></a>
-                </div>
-            </aside>
-            <nav class="pt-5 flex flex-col items-center lg:items-start">
-                <h1 class="text-xl font-semibold text-black">Contact</h1>
-                <span>Durgathali-2, Bajhang, Nepal</span>
-                <span>Email:- hilltop-academy@outlook.com</span>
-                <span>Phone:- +9779814637756</span>
-            </nav>
-            <nav class="pt-5 flex flex-col items-center lg:items-start ">
-                <h1 class="text-xl font-semibold text-black">Principal</h1>
-                <span>Janak Dhami</span>
-                <span>janakdhamieg@gmail.com</span>
-                <span>+977-9863943736</span>
-            </nav>
-            <nav class="pt-5 flex flex-col items-center lg:items-start">
-                <h1 class="text-xl font-semibold text-black">Links</h1>
-                <a href="" class="hover:underline">About us</a>
-                <a href="" class="hover:underline">Contact</a>
-                <a href="" class="hover:underline">Gallery</a>
-                <a href="" class="hover:underline">Sevices</a>
-            </nav>
-        </footer>
+        <!-- footer -->
+    <footer class="font-display px-10 py-4 bg-footer_bg flex items-center flex-col lg:flex-row justify-around">
+        <aside class="flex flex-col items-center text-blueish_dark">
+            <img class="object-cover max-w-48 max-h-48" src="./assets/logo.png" alt="Logo">
+            <span class="text-2xl font-semibold">Hilltop Academy</span>
+            <i>"Knowladge is the Power"</i>
+            <span>Estd: 2078</span>
+            <div class="min-w-28 flex justify-around text-slate-400 text-sm">
+                <a href="" class="hover:text-blue-700"><i class="fa-brands fa-facebook "></i></a>
+                <a href="" class="hover:text-pink-700"><i class="fa-brands fa-instagram"></i></a>
+                <a href="" class="hover:text-red-700"><i class="fa-brands fa-youtube"></i></a>
+                <a href="" class="hover:text-blue-950"><i class="fa-brands fa-tiktok"></i></a>
+            </div>
+        </aside>
+        <nav class="pt-5 flex flex-col items-center lg:items-start">
+            <h1 class="text-xl font-medium text-blueish_dark">Contact</h1>
+            <span>Durgathali-2, Bajhang, Nepal</span>
+            <span>Email:- hilltop-academy@outlook.com</span>
+            <span>Phone:- +9779814637756</span>
+        </nav>
+        <nav class="pt-5 flex flex-col items-center lg:items-start">
+            <h1 class="text-xl font-medium text-blueish_dark">Principal</h1>
+            <span>Janak Dhami</span>
+            <span>janakdhamieg@gmail.com</span>
+            <span>+977-9863943736</span>
+        </nav>
+        <nav class="pt-5 flex flex-col items-center lg:items-start">
+            <h1 class="text-xl font-medium text-blueish_dark">Links</h1>
+            <a href="" class="hover:underline">About us</a>
+            <a href="" class="hover:underline">Contact</a>
+            <a href="" class="hover:underline">Gallery</a>
+            <a href="" class="hover:underline">Sevices</a>
+        </nav>
+    </footer>
 
 
 </body>
