Update: responsiveness in home page

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="p-3 px-16 flex bg-white justify-between items-center">
+    <nav class="p-3 px-3 lg:px-16 flex bg-white justify-between items-center">
         <a href="#" id="brand" class="flex gap-2 items-center">
             <img class="object-cover max-w-32 max-h-32" src="./assets/logo.png" alt="Logo">
             <span class="text-lg font-medium font-display">Hilltop Academy</span>
@@ -57,7 +57,7 @@
         </div>
     </nav>
     <div class="flex flew-row justify-start items-center bg-[url(./assets/bg-3.jpg)] h-96 bg-center bg-clip-content">
-        <div class="p-8 ml-10 max-w-lg min-h-40 bg-white border-0 rounded-xl flex flex-col items-center opacity-85 hover:opacity-90 transition-all duration-200"
+        <div class="p-8 ml-0 xl:ml-10 max-w-lg min-h-40 bg-white border-0 rounded-xl flex flex-col items-center opacity-85 hover:opacity-90 transition-all duration-200"
             href="#">
             <div class="">
                 <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Knowladge is the
@@ -84,18 +84,18 @@
             <span>Join our Journey of dicovery</span>
         </div>
         <div id class="">
-            <span class="text-3xl font-semibold">
+            <span class="text-lg lg:text-3xl font-semibold">
                 WELCOME TO THE <span class="text-green-600">&nbspBRIGHT&nbsp</span><span class="text-green-600">
                     FUTURE</span> OF KIDS.
             </span>
         </div>
     </div>
     <!-- Principal message -->
-    <div class="mx-32 flex flex-col mt-10">
+    <div class="lg:mx-32 flex flex-col mt-10">
         <span class="pl-16 text-3xl font-semibold">Principal's Message</span>
-        <div class="flex flex-row justify-center">
+        <div class="flex flex-col lg:flex-row justify-center items-center">
             <!-- Principal info -->
-            <div class="p-5 mr-10 mt-5 w-60 flex flex-col items-center border-0 rounded-xl bg-card_bg hover:shadow-xl
+            <div class="p-5 lg:mr-10 mt-5 w-60 flex flex-col items-center border-0 rounded-xl bg-card_bg hover:shadow-xl
                 transition-all duration-300">
                 <img src="assets/profile.jpg" class="h-28 border-0 rounded-full" alt="Principal Profile Picture">
                 <h1 class="text-xl font-bold text-center text-blueish_dark">Janak Dhami</h1>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <!-- Principal message -->
-            <div class="w-2/3">
+            <div class="px-10 lg:px-0 lg:w-2/3">
                 <p class="pt-2 text-justify">It is with great pride and excitement that I welcome you to Hilltop
                     Academy! Along with
                     the teachers and staff at Hilltop Academy, I am working hard to continue the legacy of success by
@@ -139,7 +139,7 @@
             <h1 class="text-3xl font-semibold">Our Expert Trainer</h1>
             <span class="text-sm font-medium italic text-slate-500">Something to write here</span>
         </div>
-        <div class="mt-2 flex justify-center">
+        <div class="mt-2 flex flex-col lg:flex-row items-center justify-center">
             <div
                 class="mx-5 p-5 bg-slate-50 flex flex-col items-center w-60 text-justify hover:shadow-xl transition-all duration-300 border-0 rounded-lg">
                 <img src="assets/profile.webp" class="border-0 rounded-md" alt="">
