--- a/gallary.html
+++ b/gallary.html
@@ -61,8 +61,9 @@
     <div
         class="w-full bg-[url(./assets/memories-bg.jpg)] h-60 bg bg-center bg-cover bg-clip-content flex justify-center items-center">
         <div class="flex flex-col items-center">
-            <span class="font-gallaryTitle text-white text-5xl font-extrabold flex items-center justify-center ">
-                Miles of<span class="text-green-600">&nbsp;Memories.</span>
+            <span class="font-gallaryTitle text-white text-lg lg:text-5xl font-extrabold flex items-center justify-center
+                ">
+                Miles of<span class="text-red-600">&nbsp;Memories.</span>
             </span>
             <p
                 class="mt-3 px-3 text-white font-display hover:bg-opacity-50 hover:bg-gray-300 transition-all duration-300 border-0 rounded-lg">
