Update: gallary,nav responsive added

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="p-3 px-16 flex bg-white justify-between items-center">
+    <nav class="p-3 px-3 lg:px-16 flex bg-white justify-between items-center">
         <a href="#" id="brand" class="flex gap-2 items-center">
             <img class="object-cover max-w-32 max-h-32" src="./assets/logo.png" alt="Logo">
             <span class="text-lg font-medium font-display">Hilltop Academy</span>
